# LayoutLens

./: CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  requirements.txt  train.py
assets/: README.md
docs/: checkpoints.md  configs.md  dataset.md  evaluation.md  reproducibility.md  training.md
evaluations/: README.md  eval_all_nview_manifests.py  oracle_e0_traditional_postprocess.py
evaluations/src/2d/: eval_2d.py  eval_2d_postprocess.py  metrics_depth.py  metrics_mask.py  metrics_normals.py  scene_metrics.py
evaluations/src/3d/: alignment.py  diagnostics.py  eval_room_envelope_reconstruction.py  metrics_chamfer.py  pointcloud.py  pose.py
evaluations/src/common/: _cli.py  _common.py  _oca_eval_helpers.py  _paths.py  _preds_io.py  _timing.py  depth_scale.py  manifest.py  normalization.py  ply_io.py  tensor_utils.py
evaluations/tests/: test_overall_3d_gtvalid_mask.py  test_silog_metric.py
examples/: README.md
room_envelopes/: __init__.py  extrinsics.py  io.py  paths.py
scripts/: evaluate_example.sh  train_example.sh
training/: eval_metrics.py  launch.py  loss_room_envelope.py  trainer.py
training/config/: default.yaml
training/data/: base_dataset.py  composed_dataset.py  dataset_util.py  dynamic_dataloader.py
training/geometry/: postprocess_cuboid.py  postprocess_planes.py  render_planes_to_depth.py  room_envelope_geometry.py
training/train_utils/: freeze.py  general.py  normalization.py  optimizer.py  wandb_clean_logger.py  wandb_logger.py
vggt/heads/: mask_head.py  normal_head.py  oca.py  seg_head.py
vggt/models/: vggt.py
(+27 files in other folders)
